heb er aan gewerkt, bijna klaar

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,4 +1,3 @@
-/* Algemene stijl */
 body {
     font-family: 'Helvetica', sans-serif;
     background-color: #d8cdb9;
@@ -20,7 +19,7 @@ body {
 }
 
 h1 {
-    margin: 20px 0; /* Ruimte toegevoegd aan de boven- en onderkant */
+    margin: 20px 0;
     color: #333;
     font-size: 24px;
     font-weight: bold;
